--- a/src/app/layout/component/footer/footer.component.html
+++ b/src/app/layout/component/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="bg-light text-center py-3">
-  <p>© 2024 CSMS Dashboard. All Rights Reserved.</p>
+  <p>© 2024 SIMPEL WEB MANAGER . All Rights Reserved.</p>
 </footer>
