--- a/src/app/layout/component/navbar/navbar.component.html
+++ b/src/app/layout/component/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav [class.minimized]="isMinimized" class="navbar navbar-expand-lg navbar-light bg-success shadow-sm rounded-bottom">
   <div class="container-fluid">
     <a class="navbar-brand text-white d-flex align-items-center" href="#">
-      <i class="fas fa-home me-2"></i> CSMS Dashboard
+      <i class="fas fa-home me-2"></i> SIMPEL Web Manager
     </a>
     <button
       class="navbar-toggler"
@@ -15,23 +15,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link text-white d-flex align-items-center" href="#">
-            <i class="fas fa-user me-2"></i> Profile
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white d-flex align-items-center" href="#">
-            <i class="fas fa-cog me-2"></i> Settings
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white d-flex align-items-center" href="#">
-            <i class="fas fa-sign-out-alt me-2"></i> Logout
-          </a>
-        </li>
-      </ul>
+   
     </div>
   </div>
 </nav>
